# kubit

./: .dockerignore  .kodiak.toml  Cargo.toml  Dockerfile  README.md  rust-toolchain.toml
.github/workflows/: actions.yml  depot.yml  package_demo.yml  release.yml  rust.yml
config/crd/: kustomization.yaml
config/crd/bases/: kubecfg.dev_appinstances.yaml
config/default/: kustomization.yaml  manager_auth_proxy_patch.yaml
config/global/: namespace.yaml
config/manager/: kustomization.yaml  manager.yaml
config/rbac/: kustomization.yaml  role.yaml  role_binding.yaml
docs/: how-it-works.md  release-process.md
examples/: demo-pull-secrets.yaml  demo.yaml
kustomize/crd/: kustomization.yaml
kustomize/crd/bases/: kubecfg.dev_appinstances.yaml
kustomize/global/: kustomization.yaml
kustomize/local/: kustomization.yaml
kustomize/manager/: kustomization.yaml  manager.yaml  nameReferences.yaml
kustomize/no-crd/: kustomization.yaml  role.yaml
kustomize/rbac/: role.yaml  service_account.yaml
kustomize/single-namespace/: kustomization.yaml  manager.yaml  role_binding.yaml
manifests/: crd.yml
scripts/: prepare_release.sh
src/: apply.rs  cleanup.rs  controller.rs  delete.rs  docker_config.rs  helpers.rs  lib.rs  local.rs  main.rs  metadata.rs  oci.rs  render.rs  resources.rs  scripting.rs
testdata/: fake-package.yml
tests/: local_apply.rs  local_cleanup.rs
tests/fixtures/: fake-package.yml  shell.jsonnet
