[package]
name = "kubit"
version = "0.0.14"
license = "MIT"
edition = "2021"
keywords = ["kubernetes"]
repository = "https://github.com/kubecfg/kubit"
authors = ["Marko Mikulicic <mmikulicic@gmail.com>"]
description = "Install kubecfg packages"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4", features = ["derive", "help", "env", "std"] }
futures = "0.3"
kube = { version = "0.85.0", features = ["runtime", "client", "derive", "rustls-tls"], default-features = false }
k8s-openapi = { version = "0.19.0", features = ["v1_26", "schemars"] }
kubert = { version = "0.21.1", features = ["clap", "runtime", "server", "metrics", "rustls-tls"], default-features = false}
tokio = { version = "1.35", features = ["full"] }
anyhow = { version = "1", features = ["backtrace"] }
tracing = "0.1"
schemars = "0.8.16"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9.30"
jsonpath_lib = "0.3.0"
thiserror = "1"
oci-distribution = { version = "0.10.0", features = ["rustls-tls"], default-features = false }
tempfile = "3"
yash-quote = "1"
tynm = "0.1.9"
itertools = "0.12.0"
base64 = "0.21.5"
assert_matches = "1.5.0"
docker_credential = "1.2.1"
home = { version = "0.5.9", features = [] }

[dev-dependencies]
assert_cmd = "2.0.12"
predicates = "3.0.4"
