[package]
name = "kubit"
version = "0.0.19"
license = "MIT"
edition = "2021"
keywords = ["kubernetes"]
repository = "https://github.com/kubecfg/kubit"
authors = ["Marko Mikulicic <mmikulicic@gmail.com>"]
description = "Install kubecfg packages"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive", "help", "env", "std"] }
futures = "0.3.30"
kube = { version = "0.87.2", features = [
    "runtime",
    "client",
    "derive",
    "rustls-tls",
], default-features = false }
k8s-openapi = { version = "0.20.0", features = ["v1_26", "schemars"] }
kubert = { version = "0.21.2", features = [
    "clap",
    "runtime",
    "server",
    "prometheus-client",
    "rustls-tls",
], default-features = false }
tokio = { version = "1.36", features = ["full"] }
anyhow = { version = "1.0.82", features = ["backtrace"] }
tracing = "0.1.40"
schemars = "0.8.17"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9.34"
jsonpath_lib = "0.3.0"
thiserror = "1.0.59"
oci-distribution = { version = "0.11.0", features = [
    "rustls-tls",
], default-features = false }
tempfile = "3.10.1"
yash-quote = "1.1.1"
tynm = "0.1.10"
itertools = "0.12.1"
base64 = "0.21.7"
assert_matches = "1.5.0"
docker_credential = "1.3.1"
home = { version = "0.5.9", features = [] }
prometheus-client = "0.22.2"

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.0.4"
